# multicam

./: CMakeLists.txt  README.md  cmake_output.txt  cmake_uninstall.cmake.in  io.github.multicam.multicam.metainfo.xml  multicam.desktop  multicam.kdev4  package_info.conf.in  run_cmake_debug.bat
StandAlone/: CMakeLists.txt  DefaultTheme.qrc  colors.qrc  icons.qrc  multicam.qrc  multicam.rc
StandAlone/ManPages/: CMakeLists.txt
StandAlone/ManPages/src/: Multicam.1.in
StandAlone/Translations/: CMakeLists.txt
StandAlone/java/: CMakeLists.txt
StandAlone/share/qml/: About.qml  AboutDialog.qml  AddVideoFormat.qml  AudioCodecOptions.qml  AudioDeviceItem.qml  AudioDeviceOptions.qml  AudioInputs.qml  AudioOptions.qml  AudioOutputs.qml  CaptureSettingsDialog.qml  ColorSchemeAddEdit.qml  ColorSchemes.qml  Commons.qml  Contributors.qml  DebugLog.qml  DownloadDialog.qml  DownloadFailedDialog.qml  DownloadSucceededDialog.qml  Flash.qml  GeneralConfig.qml  ImageCapture.qml  License.qml  LocalSettingsMenu.qml  LogSavedDialog.qml  MainPanel.qml  OptionList.qml  OptionsPanel.qml  PluginConfig.qml  PluginItem.qml  (+29 more)
StandAlone/src/: CMakeLists.txt  audiolayer.cpp  audiolayer.h  clioptions.cpp  clioptions.h  downloadmanager.cpp  downloadmanager.h  iconsprovider.cpp  iconsprovider.h  main.cpp  mediatools.cpp  mediatools.h  pluginconfigs.cpp  pluginconfigs.h  recording.cpp  recording.h  updates.cpp  updates.h  videodisplay.cpp  videodisplay.h  videoeffects.cpp  videoeffects.h  videolayer.cpp  videolayer.h
libAvKys/: CMakeLists.txt
libAvKys/Lib/: CMakeLists.txt
libAvKys/Plugins/: CMakeLists.txt
libAvKys/cmake/: ProjectCommons.cmake
(+1087 files in other folders)
